[package]
name = "kubefs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
fuser = "0.12.0"
kube = { version = "0.79.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
libc = "0.2.139"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }
clap = "4.1.8"
daemonize = "0.5.0"
mini-moka = "0.10.0"
